<?xml version="1.0"?>
<package format="3">
  <name>diffrobot_navigation</name>
  <version>0.0.1</version>
  <description>Navigation2 setup for differential robot.</description>

  <maintainer email="mherodavaa@gmail.com">erdemdavaa</maintainer>
  <license>Apache-2.0</license>

  <!-- Core dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
