<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffrobot_simulation_teleop</name>
  <version>0.0.0</version>
  <description>Teleop control for diffrobot simulation</description>
  <maintainer email="erdemdavaa.munkhbayar@gmail.com">erdemdavaa</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
